<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DND</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_profile">Create Profile</string>
    <string name="action_log">Call Log</string>
    <string name="action_reject">Reject List</string>
    <string name="action_help">Help</string>
    <string name="action_about">About Us</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="dnd">Do Not Disturb</string>
    <string name="active">Active</string>
    <string name="disabled">Disabled</string>
    <string name="contact_msg">Select the contacts which you want to block</string>
    <string name="contact">Contact</string>
    <string name="ok">Ok</string>
    <string name="info">Info</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_profile_list">ProfileListActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="no_active_profile">No Active Profile \n Create default profile</string>

</resources>
