<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_profile"/>
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_help"/>
    <item
        android:id="@+id/action_aboutus"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_about"/>
    <item
        android:id="@+id/menu_item_share"
        android:actionProviderClass="android.view.ActionProvider"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_share"
        android:title="Share"/>

</menu>